add styles for 'control sizing'

--- a/liquid/_includes/components/control-sizing.html
+++ b/liquid/_includes/components/control-sizing.html
@@ -1,4 +1,35 @@
 <div class="box">
   <h1 id="control-sizing">Control Sizing</h1>
   <hr/>
+  <h2>Height</h2>
+  <div class="bs-example">
+    <div class="form-group">
+      <input type="text" class="form-control input-lg" placeholder=".input-lg">
+    </div>
+    <div class="form-group">
+      <input type="text" class="form-control input-md" placeholder=".input-md">
+    </div>
+    <div class="form-group">
+      <input type="text" class="form-control input-sm" placeholder=".input-sm">
+    </div>
+    <select class="form-control input-lg">
+      <option>input-lg</option>
+      <option>input-lg</option>
+      <option>input-lg</option>
+    </select>
+    <br>
+    <select class="form-control input-md">
+      <option>input-md</option>
+      <option>input-md</option>
+      <option>input-md</option>
+    </select>
+    <br>
+    <select class="form-control input-md">
+      <option>input-md</option>
+      <option>input-md</option>
+      <option>input-md</option>
+    </select>
+
+  </div>
+  <h2>Column sizing</h2>
 </div>
