[#73271162] add logo backgorund

--- a/liquid/_includes/style/logo-usage.html
+++ b/liquid/_includes/style/logo-usage.html
@@ -6,7 +6,7 @@
   <h2>Preferred</h2>
   <div class="row">
     <div class="col-xs-6 col-md-4">
-      <div class="image-wrap">
+      <div class="image-wrap gengo-green">
         <!-- TODO: add image -->
         <div class="download-links">
           <div class="links">
@@ -47,7 +47,7 @@
   <div class="row">
     <div class="col-xs-6 col-md-4">
       <!-- TODO: add image -->
-      <div class="image-wrap"></div>
+      <div class="image-wrap gengo-gray"></div>
       <p>More neutral branding</p>
     </div>
     <div class="col-xs-6 col-md-4">
@@ -62,12 +62,12 @@
     </div>
     <div class="col-xs-6 col-md-4">
       <!-- TODO: add image -->
-      <div class="image-wrap"></div>
+      <div class="image-wrap gengo-blue"></div>
       <p>Translator facing</p>
     </div>
     <div class="col-xs-6 col-md-4">
       <!-- TODO: add image -->
-      <div class="image-wrap"></div>
+      <div class="image-wrap gengo-red"></div>
       <p>Developer facing</p>
     </div>
   </div>
