[#73271162] add CSS for displaying iamges

--- a/liquid/_includes/style/logo-usage.html
+++ b/liquid/_includes/style/logo-usage.html
@@ -7,7 +7,7 @@
   <div class="row">
     <div class="col-xs-6 col-md-4">
       <div class="image-wrap gengo-green">
-        <!-- TODO: add image -->
+        <img src="assets/images/logos/gengo_logo_white@2x.png" width="144" height="51" class="img-fit">
         <div class="download-links">
           <div class="links">
             <a href="#">PNG</a>
@@ -18,8 +18,10 @@
       <p>For general public</p>
     </div>
     <div class="col-xs-6 col-md-4">
-      <div class="image-wrap">
-        <!-- TODO: add image -->
+      <div class="image-wrap gengo-white">
+        <div class="logo-circle">
+          <img src="assets/images/logos/gengo_logo_circle_512.png" alt="">
+        </div>
         <div class="download-links">
           <div class="links">
             <a href="#">PNG</a>
@@ -30,8 +32,8 @@
       <p>For general public</p>
     </div>
     <div class="col-xs-6 col-md-4">
-      <div class="image-wrap">
-        <!-- TODO: add image -->
+      <div class="image-wrap minimal-spacing">
+        <img src="assets/images/logos/gengo_logo_spacing@2x.png" width="239" height="135" alt="">
         <div class="download-links">
           <div class="links">
             <a href="#">PNG</a>
@@ -46,28 +48,33 @@
   <h2>Acceptable</h2>
   <div class="row">
     <div class="col-xs-6 col-md-4">
-      <!-- TODO: add image -->
-      <div class="image-wrap gengo-gray"></div>
+      <div class="image-wrap gengo-gray">
+        <img src="assets/images/logos/gengo_logo_white@2x.png" width="144" height="51" class="img-fit">
+      </div>
       <p>More neutral branding</p>
     </div>
     <div class="col-xs-6 col-md-4">
-      <!-- TODO: add image -->
-      <div class="image-wrap"></div>
+      <div class="image-wrap bg-image">
+        <img src="assets/images/logos/gengo_logo_white@2x.png" width="144" height="51" class="img-fit">
+      </div>
       <p>On a dark background image</p>
     </div>
     <div class="col-xs-6 col-md-4">
-      <!-- TODO: add image -->
-      <div class="image-wrap"></div>
+      <div class="image-wrap gengo-white">
+        <img src="assets/images/logos/gengo_logo_green@2x.png" width="144" height="51" class="img-fit">
+      </div>
       <p>On white background</p>
     </div>
     <div class="col-xs-6 col-md-4">
-      <!-- TODO: add image -->
-      <div class="image-wrap gengo-blue"></div>
+      <div class="image-wrap gengo-blue">
+        <img src="assets/images/logos/gengo_logo_white@2x.png" width="144" height="51" class="img-fit">
+      </div>
       <p>Translator facing</p>
     </div>
     <div class="col-xs-6 col-md-4">
-      <!-- TODO: add image -->
-      <div class="image-wrap gengo-red"></div>
+      <div class="image-wrap gengo-red">
+        <img src="assets/images/logos/gengo_logo_white@2x.png" width="144" height="51" class="img-fit">
+      </div>
       <p>Developer facing</p>
     </div>
   </div>
