[#73271162] add file for svg & png download

--- a/liquid/_includes/style/logo-usage.html
+++ b/liquid/_includes/style/logo-usage.html
@@ -10,8 +10,8 @@
         <img src="assets/images/logos/gengo_logo_white@2x.png" width="144" height="51" class="img-fit">
         <div class="download-links">
           <div class="links">
-            <a href="#">PNG</a>
-            <a href="#">SVG</a>
+            <a href="downloads/gengo_logos_png.zip">PNG</a>
+            <a href="downloads/gengo_logos_svg.zip">SVG</a>
           </div>
         </div>
       </div>
@@ -24,7 +24,7 @@
         </div>
         <div class="download-links">
           <div class="links">
-            <a href="#">PNG</a>
+            <a href="downloads/gengo_logo_circle_png.zip">PNG</a>
             <a href="#">SVG</a>
           </div>
         </div>
@@ -34,12 +34,6 @@
     <div class="col-xs-6 col-md-4">
       <div class="image-wrap minimal-spacing">
         <img src="assets/images/logos/gengo_logo_spacing@2x.png" width="239" height="135" alt="">
-        <div class="download-links">
-          <div class="links">
-            <a href="#">PNG</a>
-            <a href="#">SVG</a>
-          </div>
-        </div>
       </div>
       <p>Minimal spacing</p>
     </div>
