--- a/liquid/_includes/style/colors.html
+++ b/liquid/_includes/style/colors.html
@@ -5,48 +5,52 @@
   <div class="row">
     <div class="col-xs-12 col-sm-6">
       <h3>Primary</h3>
-      <div class="item">
-        <div class="color-box gengo-green"></div>
-        <strong>GENGO GREEN</strong> <span class="color">#1CAD7E</span>
-      </div>
-      <div class="item">
-        <div class="color-box translator-blue"></div>
-        <strong>TRANSLATOR BLUE</strong> <span class="color">#98D7CC</span>
-      </div>
-      <div class="item">
-        <div class="color-box developer-red"></div>
-        <strong>DEVELOPER RED</strong> <span class="color">#EA5E47</span>
-      </div>
     </div>
     <div class="col-xs-12 col-sm-3">
       <h3>Secondary</h3>
-      <div class="item">
-        <div class="color-box gengo-lemon"></div>
-        <strong>GENGO LEMON</strong> <span class="color">#C3EA94</span>
-      </div>
-      <div class="item">
-        <div class="color-box gengo-lgreen"></div>
-        <strong>GENGO LGREEN</strong> <span class="color">#AEDBB3</span>
-      </div>
-      <div class="item">
-        <div class="color-box gengo-beige"></div>
-        <strong>GENGO BEIGE</strong> <span class="color">#F1F2C8</span>
-      </div>
     </div>
     <div class="col-xs-12 col-sm-3">
       <h3>Supporting</h3>
-      <div class="item">
-        <div class="color-box gengo-gray"></div>
-        <strong>GENGO GREY</strong> <span class="color">#4D4843</span>
-      </div>
-      <div class="item">
-        <div class="color-box gengo-bg"></div>
-        <strong>GENGO BG</strong> <span class="color">#F4F4F4</span>
-      </div>
-      <div class="item">
-        <div class="color-box gengo-white"></div>
-        <strong>WHITE</strong> <span class="color">#FFFFFF</span>
-      </div>
     </div>
+
+    <div class="item col-xs-12 col-sm-6">
+      <div class="color-box gengo-green"></div>
+      <strong>GENGO GREEN</strong> <span class="color">#1CAD7E</span>
+    </div>
+    <div class="item col-xs-12 col-sm-3">
+      <div class="color-box gengo-lemon"></div>
+      <strong>GENGO LEMON</strong> <span class="color">#C3EA94</span>
+    </div>
+    <div class="item col-xs-12 col-sm-3">
+      <div class="color-box gengo-gray"></div>
+      <strong>GENGO GREY</strong> <span class="color">#4D4843</span>
+    </div>
+
+    <div class="item col-xs-12 col-sm-6">
+      <div class="color-box translator-blue"></div>
+      <strong>TRANSLATOR BLUE</strong> <span class="color">#98D7CC</span>
+    </div>
+    <div class="item col-xs-12 col-sm-3">
+      <div class="color-box gengo-lgreen"></div>
+      <strong>GENGO LGREEN</strong> <span class="color">#AEDBB3</span>
+    </div>
+    <div class="item col-xs-12 col-sm-3">
+      <div class="color-box gengo-bg"></div>
+      <strong>GENGO BG</strong> <span class="color">#F4F4F4</span>
+    </div>
+
+    <div class="item col-xs-12 col-sm-6">
+      <div class="color-box developer-red"></div>
+      <strong>DEVELOPER RED</strong> <span class="color">#EA5E47</span>
+    </div>
+    <div class="item col-xs-12 col-sm-3">
+      <div class="color-box gengo-beige"></div>
+      <strong>GENGO BEIGE</strong> <span class="color">#F1F2C8</span>
+    </div>
+    <div class="item col-xs-12 col-sm-3">
+      <div class="color-box gengo-white"></div>
+      <strong>WHITE</strong> <span class="color">#FFFFFF</span>
+    </div>
+
   </div>
 </div>
