--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -614,6 +614,11 @@ $label-info-bg:               $brand-info !default;
 $label-warning-bg:            $brand-warning !default;
 //** Danger label background color
 $label-danger-bg:             $brand-danger !default;
+//** Translator label background color
+$label-translator-bg:          $brand-translator !default;
+//** Developer label background color
+$label-developer-bg:           $brand-developer !default;
+
 
 //** Default label text color
 $label-color:                 #fff !default;
