--- a/scss/gengo.scss
+++ b/scss/gengo.scss
@@ -18,6 +18,7 @@
 @import "supported-controls";
 @import "validation-states";
 @import "control-sizing";
+@import "labels";
 @import "modals";
 @import "status";
 @import "breadcrumbs";
