[#73271162] add apple touch icon

--- a/liquid/_layouts/default.html
+++ b/liquid/_layouts/default.html
@@ -44,6 +44,7 @@ js:
   {% for href in page.css %}<link rel="stylesheet" type="text/css" href="{{href}}" />
   {% endfor %}
   <!-- Favicons -->
+  <link rel="apple-touch-icon-precomposed" href="assets/images/apple-touch-icons/gengo_c_app.png">
   <link rel="icon" href="assets/favicons/gengo.ico" type="image/x-icon">
 </head>
 <body>
