fix markup error

--- a/liquid/_includes/components/control-sizing.html
+++ b/liquid/_includes/components/control-sizing.html
@@ -19,6 +19,7 @@
 </div>
 {% endhighlight %}
 <br>
+  <div class="bs-example">
     <select class="form-control input-lg">
       <option>input-lg</option>
       <option>input-lg</option>
