--- a/liquid/_includes/components/control-sizing.html
+++ b/liquid/_includes/components/control-sizing.html
@@ -33,9 +33,9 @@
     </select>
     <br>
     <select class="form-control input-sm">
-      <option>input-md</option>
-      <option>input-md</option>
-      <option>input-md</option>
+      <option>input-sm</option>
+      <option>input-sm</option>
+      <option>input-sm</option>
     </select>
   </div>
 <br>
