[#73271142]add 'helper classes'

--- a/scss/gengo.scss
+++ b/scss/gengo.scss
@@ -19,6 +19,7 @@
 @import "validation-states";
 @import "control-sizing";
 @import "labels";
+@import "helper-classes";
 @import "modals";
 @import "status";
 @import "breadcrumbs";
