--- a/liquid/_includes/components/helper-classes.html
+++ b/liquid/_includes/components/helper-classes.html
@@ -1,3 +1,20 @@
 <div class="box">
   <h1 id="helper-classes">Helper Classes</h1>
+  <h2>Close icon</h2>
+  <div class="bs-example">
+     <span class="icon-close" style="font-size:10px;color:#4d4843;"></span>
+     <span class="icon-close" style="font-size:16px;;color:#4d4843;display:inline-block;margin-left:20px;"></span>
+  </div>
+<br>
+{% highlight html %}
+<span class="icon-close"></span>
+{% endhighlight %}
+  <h2>Carets</h2>
+  <div class="bs-example">
+   <span class="caret"></span>
+  </div>
+  <br>
+{% highlight html %}
+<span class="caret"></span>
+{% endhighlight %}
 </div>
