--- a/scss/gengo.scss
+++ b/scss/gengo.scss
@@ -22,6 +22,7 @@
 @import "alerts";
 @import "badges";
 @import "labels";
+@import "helper-classes";
 @import "modals";
 @import "status";
 @import "breadcrumbs";
