change indent in html and selector order in scss

--- a/scss/_control-sizing.scss
+++ b/scss/_control-sizing.scss
@@ -1,11 +1,11 @@
-select.form-control.input-lg,
-.input-lg {
+.input-lg,
+select.form-control.input-lg {
   height: 42px;
   padding: 12px 13px;
 }
 
-select.form-control.input-sm,
-.input-sm {
+.input-sm,
+select.form-control.input-sm {
   height: 30px;
   padding: 6px 13px;
 }
