--- a/liquid/_includes/components/badges.html
+++ b/liquid/_includes/components/badges.html
@@ -1,4 +1,17 @@
 <div class="box">
   <h1 id="badges">Badges</h1>
   <hr/>
+  <br>
+  <div class="bs-example">
+    <ul class="nav nav-pills nav-stacked">
+      <li class="active"><a href="#">All</a><span class="badge">42</span></li>
+      <li><a href="#">Pending</a><span class="badge">42</span></li>
+      <li><a href="#">reviewable</a><span class="badge">42</span></li>
+    </ul>
+  </div>
+<br>
+{% highlight html %}
+<span class="badge">42</span>
+{% endhighlight %}
+  <div>If the background is <code>#f4f4f4</code>, the active state becomes <code>#ffffff</code></div>
 </div>
