fix markup error
add necessary "</div" in "control-sizing.html"

--- a/liquid/_includes/components/control-sizing.html
+++ b/liquid/_includes/components/control-sizing.html
@@ -12,13 +12,14 @@
     <div class="form-group">
       <input type="text" class="form-control input-sm" placeholder=".input-sm">
     </div>
-<br>
+  </div>
+  <br>
 {% highlight html %}
 <div class="form-group">
   <input type="text" class="form-control input-lg" placeholder=".input-lg">
 </div>
 {% endhighlight %}
-<br>
+  <br>
   <div class="bs-example">
     <select class="form-control input-lg">
       <option>input-lg</option>
@@ -38,13 +39,12 @@
       <option>input-sm</option>
     </select>
   </div>
-<br>
+  <br>
 {% highlight html %}
 <select class="form-control input-lg">
   <option>input-lg</option>
 </select>
 {% endhighlight %}
-
   <h2>Column sizing</h2>
   <form class="form row" role="form">
     <div class="form-group col-xs-2">
@@ -57,7 +57,7 @@
       <input type="text" class="form-control col-xs-4" placeholder=".col-xs-4">
     </div>
   </form>
-<br>
+  <br>
 {% highlight html %}
 <form class="form row" role="form">
   <div class="form-group col-xs-2">
@@ -71,7 +71,6 @@
   </div>
 </form>
 {% endhighlight %}
-
   <h2>Help text</h2>
   <div class="form-group">
     <input type="text" class="form-control input-md">
@@ -79,7 +78,7 @@
   <div class="form-group">
     <span class="help-block">A block of help text that breaks onto a new line and may extend beyond one line.</span>
   </div>
-<br>
+  <br>
 {% highlight html %}
 <span class="help-block">A block of help text that breaks onto a new line and may extend beyond one line.</span>
 {% endhighlight %}
