--- a/liquid/_includes/components/alerts.html
+++ b/liquid/_includes/components/alerts.html
@@ -1,4 +1,67 @@
 <div class="box">
   <h1 id="alerts">Alerts</h1>
   <hr/>
+  <br>
+  <div class="bs-example" style="width:380px;">
+    <div class="alert alert-dismissible" role="alert">
+      <button type="button" class="close" data-dismiss="alert">
+        <span>&times;</span>
+      </button>
+      <strong>Heads up!</strong> This alert is not that important.
+    </div>
+    <div class="alert alert-dismissible" role="alert">
+      <button type="button" class="close" data-dismiss="alert">
+        <span>&times;</span>
+      </button>
+      <div class="row">
+        <div class="col-md-1"><span class="icon-warning"></span></div>
+        <div class="col-md-9">
+          <strong>Warning!</strong> This file could not be saved.
+        </div>
+      </div>
+    </div>
+    <div class="alert alert-dismissible" role="alert">
+      <button type="button" class="close" data-dismiss="alert">
+        <span>&times;</span>
+      </button>
+      <div class="row">
+        <div class="col-md-1"><span class="icon-error"></span></div>
+        <div class="col-md-9">
+          <strong>Oops!</strong> There was an Error with the following file. <a href="#">All Games_Order.odt</a>
+        </div>
+      </div>
+    </div>
+    <div class="alert alert-dismissible" role="alert">
+      <button type="button" class="close" data-dismiss="alert">
+        <span>&times;</span>
+      </button>
+      <div class="row">
+        <div class="col-md-1"><span class="icon-validation"></span></div>
+        <div class="col-md-9">
+          <strong>Well done!</strong> You have successfully finished this job.
+        </div>
+      </div>
+    </div>
+  </div>
+  <br>
+{% highlight html %}
+<div class="alert alert-dismissible" role="alert">
+  <button type="button" class="close" data-dismiss="alert">
+    <span>&times;</span>
+  </button>
+  <strong>Heads up!</strong> This alert is not that important.
+</div>
+
+<div class="alert alert-dismissible" role="alert">
+  <button type="button" class="close" data-dismiss="alert">
+    <span>&times;</span>
+  </button>
+  <div class="row">
+    <div class="col-md-1"><span class="icon-warning"></span></div>
+    <div class="col-md-9">
+      <strong>Warning!</strong> This file could not be saved.
+    </div>
+  </div>
+</div>
+{% endhighlight %}
 </div>
