--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -242,10 +242,13 @@ $workbench-icon-active-color: #fff !default;
     }
 
     > li > a:hover,
-    .active > a,
-    .open > a,
     .open > a:hover {
       background-color: $hover-dark-gray;
+
+      &.disabled {
+        background-color: transparent;
+        cursor: default;
+      }
     }
 
     .btn {
@@ -260,6 +263,10 @@ $workbench-icon-active-color: #fff !default;
         &:hover,
         &.selected {
           color: $workbench-icon-active-color;
+
+          &.disabled {
+            color: #837f7c;
+          }
         }
       }
 
