--- a/liquid/_includes/components/progress-bar.html
+++ b/liquid/_includes/components/progress-bar.html
@@ -4,27 +4,27 @@
   <h2>Basic</h2>
   <div class="bs-example">
     <div class="progress">
-      <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"></div>
+      <div class="progress-bar" role="progressbar" style="width: 60%;"></div>
     </div>
   </div>
   <br>
 
 {% highlight html %}
 <div class="progress">
-  <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"></div>
+  <div class="progress-bar" role="progressbar" style="width: 60%;"></div>
 </div>
 {% endhighlight %}
 
   <h2>With label</h2>
   <div class="bs-example">
     <div class="progress">
-      <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 82%;">82%</div>
+      <div class="progress-bar" role="progressbar" style="width: 82%;">82%</div>
     </div>
   </div>
   <br>
 {% highlight html %}
 <div class="progress">
-  <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 82%;">82%</div>
+  <div class="progress-bar" role="progressbar" style="width: 82%;">82%</div>
 </div>
 {% endhighlight %}
 
@@ -34,102 +34,90 @@
   <br>
   <div class="bs-example">
     <div class="progress">
-      <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 82%">
-      </div>
+      <div class="progress-bar" role="progressbar" style="width: 82%"></div>
     </div>
     <div class="progress">
-      <div class="progress-bar progress-translator" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 61%">
-      </div>
+      <div class="progress-bar progress-translator" role="progressbar" style="width: 61%"></div>
     </div>
     <div class="progress">
-      <div class="progress-bar progress-secondary" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
-      </div>
+      <div class="progress-bar progress-secondary" role="progressbar" style="width: 40%"></div>
     </div>
     <div class="progress">
-      <div class="progress-bar progress-developer" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 20%">
-      </div>
+      <div class="progress-bar progress-developer" role="progressbar" style="width: 20%"></div>
     </div>
   </div>
   <br>
+
+
 {% highlight html %}
 <div class="progress">
-  <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 82%">
-  </div>
+  <div class="progress-bar" role="progressbar" style="width: 82%"></div>
 </div>
 <div class="progress">
-  <div class="progress-bar progress-translator" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 61%">
-  </div>
+  <div class="progress-bar progress-translator" role="progressbar" style="width: 61%"></div>
 </div>
 <div class="progress">
-  <div class="progress-bar progress-secondary" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
-  </div>
+  <div class="progress-bar progress-secondary" role="progressbar" style="width: 40%"></div>
 </div>
 <div class="progress">
-  <div class="progress-bar progress-developer" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 20%">
-  </div>
+  <div class="progress-bar progress-developer" role="progressbar" style="width: 20%"></div>
 </div>
 {% endhighlight %}
 
   <h2>Striped</h2>
+  <br>
+  <div>Uses a gradient to create a striped effect. Not available in IE8.</div>
+  <br>
   <div class="bs-example">
     <div class="progress-striped">
       <div class="progress">
-        <div class="progress-bar progress-bar-striped" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 82%">
-        </div>
+        <div class="progress-bar" role="progressbar" style="width: 82%"></div>
       </div>
       <div class="progress">
-        <div class="progress-bar progress-bar-striped progress-translator" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 61%">
-        </div>
+        <div class="progress-bar progress-translator" role="progressbar" style="width: 61%"></div>
       </div>
       <div class="progress">
-        <div class="progress-bar progress-bar-striped progress-secondary" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
-        </div>
+        <div class="progress-bar progress-secondary" role="progressbar" style="width: 40%"></div>
       </div>
       <div class="progress">
-        <div class="progress-bar progress-bar-striped progress-developer" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 20%">
-        </div>
+        <div class="progress-bar progress-developer" role="progressbar" style="width: 20%"></div>
       </div>
     </div>
   </div>
   <br>
+
 {% highlight html %}
 <div class="progress-striped">
   <div class="progress">
-    <div class="progress-bar progress-bar-striped" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 82%">
-    </div>
+    <div class="progress-bar" role="progressbar" style="width: 82%"></div>
   </div>
   <div class="progress">
-    <div class="progress-bar progress-bar-striped progress-translator" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 61%">
-    </div>
+    <div class="progress-bar progress-translator" role="progressbar" style="width: 61%"></div>
   </div>
   <div class="progress">
-    <div class="progress-bar progress-bar-striped progress-secondary" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
-    </div>
+    <div class="progress-bar progress-secondary" role="progressbar" style="width: 40%"></div>
   </div>
   <div class="progress">
-    <div class="progress-bar progress-bar-striped progress-developer" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 20%">
-    </div>
+    <div class="progress-bar progress-developer" role="progressbar" style="width: 20%"></div>
   </div>
 </div>
 {% endhighlight %}
+
 
   <h2>Animated</h2>
   <div class="bs-example">
     <div class="progress-striped">
       <div class="progress active">
-        <div class="progress-bar progress-bar-striped active"  role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%">
-          <span class="sr-only">45% Complete</span>
-        </div>
+        <div class="progress-bar active"  role="progressbar" style="width: 45%"></div>
       </div>
     </div>
   </div>
   <br>
+
 {% highlight html %}
 <div class="progress-striped">
   <div class="progress active">
-    <div class="progress-bar progress-bar-striped active"  role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%">
-      <span class="sr-only">45% Complete</span>
-    </div>
+    <div class="progress-bar active"  role="progressbar" style="width: 45%"></div>
   </div>
 </div>
 {% endhighlight %}
@@ -144,6 +132,8 @@
     </div>
   </div>
   <br>
+
+
 {% highlight html %}
 <div class="progress">
   <div class="progress-bar progress-primary" style="width: 30%"></div>
@@ -152,5 +142,7 @@
   <div class="progress-bar progress-developer" style="width: 5%"></div>
 </div>
 {% endhighlight %}
+
+
 
 </div>
