--- a/scss/_modals.scss
+++ b/scss/_modals.scss
@@ -5,8 +5,8 @@
 
   .close {
     position: absolute;
-    top: 12px;
-    right: 12px;
+    top: $modal-close-btn-possition;
+    right: $modal-close-btn-possition;
   }
   .modal-header {
     margin: 0 0 12px;
@@ -33,8 +33,8 @@
     padding: 0;
     border: 0;
 
-    .btn+.btn {
-      margin-left: 12px;
+    .btn + .btn {
+      margin-left: $modal-footer-btn-padding;
     }
   }
 }
