--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -695,7 +695,11 @@ $alert-danger-text:           $state-danger-text !default;
 $alert-danger-border:         $state-danger-border !default;
 
 $alert-error-text:            #c46950 !default;
-$alert-validation-text:       #70a581 !default;
+$alert-validation-text:       #1cad7e !default;
+
+$alert-overlay-text:          14px !default;
+$alert-overlay-lineheight:    24px !default;
+$alert-overlay-icon:          24px !default;
 
 
 
