--- a/scss/_alerts.scss
+++ b/scss/_alerts.scss
@@ -2,10 +2,18 @@
   background-color: $alert-bg-color;
   color: $alert-text-color;
   font-size: $alert-font-size;
+  margin-bottom: 14px;
   padding: $alert-padding;
   box-shadow: 0 1px 6px 1px rgba(0, 0, 0, .2);
-  [class^="icon-"] {
+  position: relative;
+
+  > [class^="icon-"] {
+    position: absolute;
+    top: 50%;
+    left: 24px;
+    margin-top: ($alert-icon-size / 2) - $alert-icon-size;
     font-size: $alert-icon-size;
+    line-height: $alert-icon-size;
   }
   .icon-warning {
     color: $alert-warning-text;
@@ -16,42 +24,57 @@
   .icon-validation {
     color: $alert-validation-text;
   }
-  .close span {
-    color: $alert-close-button-color;
+
+  .close,
+  .icon-close {
+    font-size: $alert-close-size;
+    line-height: $alert-close-size;
+    color: $alert-close-color;
     text-shadow: none;
   }
+  .close {
+    @include opacity(.2);
+    position: absolute;
+    float: none;
+    top: 50%;
+    right: 18px;
+    margin-top: ($alert-close-size / 2) - $alert-close-size;
+
+    &:hover,
+    &:focus {
+      @include opacity(.5);
+    }
+  }
+
+  p {
+    padding: 0 0 0 40px;
+  }
+
   a,
   a:hover,
   a:focus {
     color: $alert-text-color;
     text-decoration: underline;
   }
-  &.alert-overlay {
+}
+
+.alert-container {
+  position: relative;
+
+  .alert-overlay {
+    @include opacity(1);
     position: absolute;
     top: 0;
     left: 0;
     z-index: 9999;
-    padding: 12px 24px 12px 33px;
+    padding: $alert-overlay-padding;
     width: 100%;
-    height: 48px;
+    height: $navbar-height;
     border: 0;
     border-radius: 0;
     font-size: $alert-overlay-text;
-    line-height: $alert-overlay-lineheight;
-    opacity: 1;
+    line-height: $alert-overlay-line-height;
     transition: top .2s linear;
-    .icon-warning,
-    .icon-error,
-    .icon-validation {
-      float: left;
-      font-size: $alert-overlay-icon;
-    }
-    span {
-      float: left;
-      margin-left: 14px;
-    }
+    box-shadow: none;
   }
-}
-.alert-container {
-  position: relative;
 }
