--- a/liquid/_includes/components/alerts.html
+++ b/liquid/_includes/components/alerts.html
@@ -1,7 +1,7 @@
-<div class="box">
+<div class="box alerts-examples">
   <h1 id="alerts">Alerts</h1>
   <hr/>
-  <br>
+
   <div class="bs-example" style="width:380px;">
     <div class="alert alert-dismissible" role="alert">
       <button type="button" class="close" data-dismiss="alert"><i class="icon-close"></i></button>
