--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -750,6 +750,7 @@ $list-group-active-text-color:  lighten($list-group-active-bg, 40%) !default;
 
 $list-group-link-color:         #555 !default;
 $list-group-link-heading-color: #333 !default;
+$list-group-badge-font-size:    12px !default;
 
 
 //== Panels
