--- a/scss/_navs.scss
+++ b/scss/_navs.scss
@@ -7,6 +7,7 @@
     // Links rendered as pills
     > a {
       color: $list-group-link-color;
+      padding: 6px 12px;
 
       &:hover,
       &:focus {
@@ -32,6 +33,7 @@
       font-weight: $font-normal;
       line-height: $line-height-base;
       border-radius: 0;
+      padding: 4px;
     }
   }
 
