[#76253826] udpate labels CSS & HTML

--- a/liquid/_includes/components/labels.html
+++ b/liquid/_includes/components/labels.html
@@ -1,17 +1,17 @@
-<div class="box">
+<div class="box labels-example">
   <h1 id="labels">Labels</h1>
   <hr/>
   <div class="bs-example">
-    <h1>Example heading <span class="label label-default">New</span></h1>
-    <h2>Example heading <span class="label label-default">New</span></h2>
-    <h3>Example heading <span class="label label-default">New</span></h3>
-    <h4>Example heading <span class="label label-default">New</span></h4>
-    <h5>Example heading <span class="label label-default">New</span></h5>
-    <h6>Example heading <span class="label label-default">New</span></h6>
+    <h1>Example Heading <span class="label label-default">New</span></h1>
+    <h2>Example Heading <span class="label label-default">New</span></h2>
+    <h3>Example Heading <span class="label label-default">New</span></h3>
+    <h4>Example Heading <span class="label label-default">New</span></h4>
+    <h5>Example Heading <span class="label label-default">New</span></h5>
+    <h6>Example Heading <span class="label label-default">New</span></h6>
   </div>
   <br>
 {% highlight html %}
-<h1>Example heading <span class="label label-default">New</span></h1>
+<h1>Example Heading <span class="label label-default">New</span></h1>
 {% endhighlight %}
   <h2>Available variations</h2>
   <div class="bs-example">
