--- a/scss/docs.scss
+++ b/scss/docs.scss
@@ -362,6 +362,12 @@
 // Components Page
 // --------------------------------------------------
 
+.labels-example {
+  .label {
+    margin-right: 2px;
+  }
+}
+
 .alerts-examples {
   hr {
     margin-bottom: 36px;
@@ -370,4 +376,3 @@
     margin-top: 6px;
   }
 }
-
