--- a/scss/_labels.scss
+++ b/scss/_labels.scss
@@ -1,3 +1,13 @@
+//
+// Labels
+// --------------------------------------------------
+
+.label {
+  padding: .08em .6em;
+  font-size: 85%;
+  font-weight: $font-semibold;
+}
+
 .label-primary {
   background-color: $gengo-green;
 }
