[#76253826] udpate Control Sizing CSS & HTML

--- a/scss/_forms.scss
+++ b/scss/_forms.scss
@@ -10,6 +10,10 @@ input[type="file"] {
   line-height: 14px;
 }
 
+.form-group {
+  margin-bottom: 12px;
+}
+
 .form-inline {
   .form-group {
     margin-right: 10px;
