--- a/liquid/_includes/components/control-sizing.html
+++ b/liquid/_includes/components/control-sizing.html
@@ -21,23 +21,27 @@
 {% endhighlight %}
   <br>
   <div class="bs-example">
-    <select class="form-control input-lg">
-      <option>input-lg</option>
-      <option>input-lg</option>
-      <option>input-lg</option>
-    </select>
-    <br>
-    <select class="form-control input-md">
-      <option>input-md</option>
-      <option>input-md</option>
-      <option>input-md</option>
-    </select>
-    <br>
-    <select class="form-control input-sm">
-      <option>input-sm</option>
-      <option>input-sm</option>
-      <option>input-sm</option>
-    </select>
+    <div class="form-group">
+      <select class="form-control input-lg">
+        <option>input-lg</option>
+        <option>input-lg</option>
+        <option>input-lg</option>
+      </select>
+    </div>
+    <div class="form-group">
+      <select class="form-control input-md">
+        <option>input-md</option>
+        <option>input-md</option>
+        <option>input-md</option>
+      </select>
+    </div>
+    <div class="form-group">
+      <select class="form-control input-sm">
+        <option>input-sm</option>
+        <option>input-sm</option>
+        <option>input-sm</option>
+      </select>
+    </div>
   </div>
   <br>
 {% highlight html %}
@@ -47,33 +51,33 @@
 {% endhighlight %}
   <h2>Column sizing</h2>
   <form class="form row" role="form">
-    <div class="form-group col-xs-2">
+    <div class="form-group input-sm col-xs-2">
       <input type="text" class="form-control col-xs-2" placeholder=".col-xs-2">
     </div>
-    <div class="form-group col-xs-3">
+    <div class="form-group input-sm col-xs-3">
       <input type="text" class="form-control col-xs-3" placeholder=".col-xs-3">
     </div>
-    <div class="form-group col-xs-4">
+    <div class="form-group input-sm col-xs-4">
       <input type="text" class="form-control col-xs-4" placeholder=".col-xs-4">
     </div>
   </form>
   <br>
 {% highlight html %}
 <form class="form row" role="form">
-  <div class="form-group col-xs-2">
+  <div class="form-group input-sm col-xs-2">
     <input type="text" class="form-control col-xs-2" placeholder=".col-xs-2">
   </div>
-  <div class="form-group col-xs-3">
+  <div class="form-group input-sm col-xs-3">
     <input type="text" class="form-control col-xs-3" placeholder=".col-xs-3">
   </div>
-  <div class="form-group col-xs-4">
+  <div class="form-group input-sm col-xs-4">
     <input type="text" class="form-control col-xs-4" placeholder=".col-xs-4">
   </div>
 </form>
 {% endhighlight %}
   <h2>Help text</h2>
   <div class="form-group">
-    <input type="text" class="form-control input-md">
+    <input type="text" class="form-control input-sm">
   </div>
   <div class="form-group">
     <span class="help-block">A block of help text that breaks onto a new line and may extend beyond one line.</span>
