[#76253826] udpate Validation States

--- a/liquid/_includes/components/validation-states.html
+++ b/liquid/_includes/components/validation-states.html
@@ -1,19 +1,19 @@
 <div class="box">
   <h1 id="validation-states">Validation States</h1>
   <hr/>
-  <br>
+
   <div class="bs-example">
     <div class="form-group has-success">
       <label class="control-label" for="inputSuccess1">Input with success</label>
-      <input type="text" class="form-control" id="inputSuccess1">
+      <input type="text" class="form-control input-sm" id="inputSuccess1">
     </div>
     <div class="form-group has-warning">
       <label class="control-label" for="inputWarning1">Input with warning</label>
-      <input type="text" class="form-control" id="inputWarning1">
+      <input type="text" class="form-control input-sm" id="inputWarning1">
     </div>
     <div class="form-group has-error" style="right:0;">
       <label class="control-label" for="inputError1">Input with error</label>
-      <input type="text" class="form-control" id="inputError1">
+      <input type="text" class="form-control input-sm" id="inputError1">
     </div>
   </div>
   <br>
@@ -21,15 +21,15 @@
 {% highlight html %}
 <div class="form-group has-success">
   <label class="control-label" for="inputSuccess1">Input with success</label>
-  <input type="text" class="form-control" id="inputSuccess1">
+  <input type="text" class="form-control input-sm" id="inputSuccess1">
 </div>
 <div class="form-group has-warning">
   <label class="control-label" for="inputWarning1">Input with warning</label>
-  <input type="text" class="form-control" id="inputWarning1">
+  <input type="text" class="form-control input-sm" id="inputWarning1">
 </div>
 <div class="form-group has-error" style="right:0;">
   <label class="control-label" for="inputError1">Input with error</label>
-  <input type="text" class="form-control" id="inputError1">
+  <input type="text" class="form-control input-sm" id="inputError1">
 </div>
 </div>
 {% endhighlight %}
@@ -38,17 +38,17 @@
   <div class="bs-example">
     <div class="form-group has-success has-feedback">
       <label class="control-label" for="inputSuccess2">Input with success</label>
-      <input type="text" class="form-control" id="inputSuccess2">
+      <input type="text" class="form-control input-sm" id="inputSuccess2">
       <span class="icon-validation form-control-feedback"></span>
     </div>
     <div class="form-group has-warning has-feedback">
       <label class="control-label" for="inputWarning2">Input with warning</label>
-      <input type="text" class="form-control" id="inputWarning2">
+      <input type="text" class="form-control input-sm" id="inputWarning2">
       <span class="icon-warning form-control-feedback"></span>
     </div>
     <div class="form-group has-error has-feedback" style="right:0;">
       <label class="control-label" for="inputError2">Input with error</label>
-      <input type="text" class="form-control" id="inputError2">
+      <input type="text" class="form-control input-sm" id="inputError2">
       <span class="icon-error form-control-feedback"></span>
     </div>
   </div>
@@ -57,27 +57,28 @@
 {% highlight html %}
 <div class="form-group has-success has-feedback">
   <label class="control-label" for="inputSuccess2">Input with success</label>
-  <input type="text" class="form-control" id="inputSuccess2">
+  <input type="text" class="form-control input-sm" id="inputSuccess2">
   <span class="icon-validation form-control-feedback"></span>
 </div>
 <div class="form-group has-warning has-feedback">
   <label class="control-label" for="inputWarning2">Input with warning</label>
-  <input type="text" class="form-control" id="inputWarning2">
+  <input type="text" class="form-control input-sm" id="inputWarning2">
   <span class="icon-warning form-control-feedback"></span>
 </div>
 <div class="form-group has-error has-feedback" style="right:0;">
   <label class="control-label" for="inputError2">Input with error</label>
-  <input type="text" class="form-control" id="inputError2">
+  <input type="text" class="form-control input-sm" id="inputError2">
   <span class="icon-error form-control-feedback"></span>
 </div>
 {% endhighlight %}
 
   <div class="bs-example">
+
     <form class="form-horizontal" role="form">
       <div class="form-group has-success has-feedback">
         <label class="control-label col-sm-3" for="inputSuccess3">Input with success</label>
         <div class="col-sm-9">
-          <input type="text" class="form-control" id="inputSuccess3">
+          <input type="text" class="form-control input-sm" id="inputSuccess3">
           <span class="icon-validation form-control-feedback"></span>
         </div>
       </div>
@@ -89,7 +90,7 @@
   <div class="form-group has-success has-feedback">
     <label class="control-label col-sm-3" for="inputSuccess3">Input with success</label>
     <div class="col-sm-9">
-      <input type="text" class="form-control" id="inputSuccess3">
+      <input type="text" class="form-control input-sm" id="inputSuccess3">
       <span class="icon-validation form-control-feedback"></span>
     </div>
   </div>
@@ -100,7 +101,7 @@
     <form class="form-inline" role="form">
       <div class="form-group has-success has-feedback">
         <label class="control-label" for="inputSuccess4">Input with success</label>
-        <input type="text" class="form-control" id="inputSuccess4">
+        <input type="text" class="form-control input-sm" id="inputSuccess4">
         <span class="icon-validation form-control-feedback"></span>
       </div>
     </form>
@@ -110,7 +111,7 @@
 <form class="form-inline" role="form">
   <div class="form-group has-success has-feedback">
     <label class="control-label" for="inputSuccess4">Input with success</label>
-    <input type="text" class="form-control" id="inputSuccess4">
+    <input type="text" class="form-control input-sm" id="inputSuccess4">
     <span class="icon-validation form-control-feedback"></span>
   </div>
 </form>
