[#76253826] udpate Validation States

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -300,8 +300,8 @@ $editable-empty-color:                #d14 !default;
 //== Validation states
 //
 //##
-$validation-success-color:              #067957 !default;
-$validation-success-border-color:       #1cad7e !default;
+$validation-success-color:             #067957 !default;
+$validation-success-border-color:      #1cad7e !default;
 $validation-warning-color:             #999d5f !default;
 $validation-warning-border-color:      #dde187 !default;
 $validation-error-color:               #a53f2c !default;
@@ -537,7 +537,7 @@ $jumbotron-font-size:            ceil(($font-size-base * 1.5)) !default;
 //
 //## Define colors for form feedback states and, by default, alerts.
 
-$state-success-text:             #3c763d !default;
+$state-success-text:             $gengo-green !default;
 $state-success-bg:               #dff0d8 !default;
 $state-success-border:           darken(adjust-hue($state-success-bg, -10), 5%) !default;
 
@@ -545,11 +545,11 @@ $state-info-text:                #31708f !default;
 $state-info-bg:                  #d9edf7 !default;
 $state-info-border:              darken(adjust-hue($state-info-bg, -10), 7%) !default;
 
-$state-warning-text:             #8a6d3b !default;
+$state-warning-text:             $brand-warning !default;
 $state-warning-bg:               #fcf8e3 !default;
 $state-warning-border:           darken(adjust-hue($state-warning-bg, -10), 5%) !default;
 
-$state-danger-text:              #a94442 !default;
+$state-danger-text:              $brand-danger !default;
 $state-danger-bg:                #f2dede !default;
 $state-danger-border:            darken(adjust-hue($state-danger-bg, -10), 5%) !default;
 
