[#76253826] fixing HTML validation errors

--- a/liquid/_includes/style/logo-usage.html
+++ b/liquid/_includes/style/logo-usage.html
@@ -7,7 +7,7 @@
   <div class="row">
     <div class="col-xs-6 col-md-4">
       <div class="image-wrap gengo-green">
-        <img src="assets/images/logos/gengo_logo_white@2x.png" width="144" height="51" class="img-fit">
+        <img src="assets/images/logos/gengo_logo_white@2x.png" width="144" height="51" class="img-fit" alt="">
         <div class="download-links">
           <div class="links">
             <a href="downloads/gengo_logos_png.zip">PNG</a>
@@ -43,31 +43,31 @@
   <div class="row">
     <div class="col-xs-6 col-md-4">
       <div class="image-wrap gengo-gray">
-        <img src="assets/images/logos/gengo_logo_white@2x.png" width="144" height="51" class="img-fit">
+        <img src="assets/images/logos/gengo_logo_white@2x.png" width="144" height="51" class="img-fit" alt="">
       </div>
       <p>More neutral branding</p>
     </div>
     <div class="col-xs-6 col-md-4">
       <div class="image-wrap bg-image">
-        <img src="assets/images/logos/gengo_logo_white@2x.png" width="144" height="51" class="img-fit">
+        <img src="assets/images/logos/gengo_logo_white@2x.png" width="144" height="51" class="img-fit" alt="">
       </div>
       <p>On a dark background image</p>
     </div>
     <div class="col-xs-6 col-md-4">
       <div class="image-wrap gengo-white">
-        <img src="assets/images/logos/gengo_logo_green@2x.png" width="144" height="51" class="img-fit">
+        <img src="assets/images/logos/gengo_logo_green@2x.png" width="144" height="51" class="img-fit" alt="">
       </div>
       <p>On white background</p>
     </div>
     <div class="col-xs-6 col-md-4">
       <div class="image-wrap gengo-blue">
-        <img src="assets/images/logos/gengo_logo_white@2x.png" width="144" height="51" class="img-fit">
+        <img src="assets/images/logos/gengo_logo_white@2x.png" width="144" height="51" class="img-fit" alt="">
       </div>
       <p>Translator facing</p>
     </div>
     <div class="col-xs-6 col-md-4">
       <div class="image-wrap gengo-red">
-        <img src="assets/images/logos/gengo_logo_white@2x.png" width="144" height="51" class="img-fit">
+        <img src="assets/images/logos/gengo_logo_white@2x.png" width="144" height="51" class="img-fit" alt="">
       </div>
       <p>Developer facing</p>
     </div>
