--- a/scss/docs.scss
+++ b/scss/docs.scss
@@ -3,6 +3,7 @@
 @import "mixins";
 @import "variables";
 
+
 .box {
   margin-bottom: 26px;
   padding-bottom: 21px;
@@ -374,5 +375,31 @@
   }
   .highlight {
     margin-top: 6px;
+  }
+}
+
+
+//
+// Grid Page
+// --------------------------------------------------
+.grid {
+  .container {
+    margin-bottom: 36px;
+  }
+  .ge-show-grid {
+    margin-bottom: 15px;
+  }
+  .ge-show-grid p {
+    background-color: #C3EA94;
+    text-align: center;
+    padding: 16px 0;
+  }
+  .box .ge-show-grid p {
+    background-color: #CDE496;
+  }
+  @media (max-width: 720px) {
+    .mobile-disable {
+      display: none;
+    }
   }
 }
