--- a/liquid/_includes/components/buttons.html
+++ b/liquid/_includes/components/buttons.html
@@ -19,6 +19,37 @@
       <button type="button" class="btn btn-link">Developers</button>
     </span>
   </div>
+  <br>
+{% highlight html %}
+<!-- Standard button -->
+<button type="button" class="btn btn-default">Default</button>
+
+<!-- Gengo color button -->
+<button type="button" class="btn btn-primary">Primary</button>
+
+<!-- Translator color button (add a class to the <body>) -->
+<span class="translator">
+  <button type="button" class="btn btn-primary">Translator</button>
+</span>
+
+<!-- Developer color button (add a class to the <body>) -->
+<span class="developer">
+  <button type="button" class="btn btn-primary">Developer</button>
+</span>
+
+<!-- Standard link -->
+<button type="button" class="btn btn-link">Link</button>
+
+<!-- Translator color link (add a class to the <body>) -->
+<span class="translator">
+  <button type="button" class="btn btn-link">Translators</button>
+</span>
+
+<!-- Developer color link (add a class to the <body>) -->
+<span class="developer">
+  <button type="button" class="btn btn-link">Developers</button>
+</span>
+{% endhighlight %}
 
   <h3>Sizes</h3>
   <div class="style-example">
@@ -63,6 +94,25 @@
       </span>
     </p>
   </div>
+  <br>
+{% highlight html %}
+<p>
+  <button type="button" class="btn btn-primary btn-lg">Large button</button>
+  <button type="button" class="btn btn-default btn-lg">Large button</button>
+</p>
+<p>
+  <button type="button" class="btn btn-primary">Default button</button>
+  <button type="button" class="btn btn-default">Default button</button>
+</p>
+<p>
+  <button type="button" class="btn btn-primary btn-sm">Small button</button>
+  <button type="button" class="btn btn-default btn-sm">Small button</button>
+</p>
+<p>
+  <button type="button" class="btn btn-primary btn-xs">Extra small button</button>
+  <button type="button" class="btn btn-default btn-xs">Extra small button</button>
+</p>
+{% endhighlight %}
 
   <h3>Block level</h3>
   <div class="style-example row">
@@ -71,6 +121,11 @@
       <button type="button" class="btn btn-primary btn-block">Medium Button</button>
     </div>
   </div>
+  <br>
+{% highlight html %}
+<button type="button" class="btn btn-primary btn-lg btn-block">Block level button</button>
+<button type="button" class="btn btn-default btn-lg btn-block">Block level button</button>
+{% endhighlight %}
 
   <h3>Activated state</h3>
   <div class="style-example">
@@ -83,6 +138,11 @@
       <button type="button" class="btn btn-primary active">Developer</button>
     </span>
   </div>
+  <br>
+{% highlight html %}
+<button type="button" class="btn btn-default active">Default</button>
+<button type="button" class="btn btn-primary active">Primary</button>
+{% endhighlight %}
 
   <h3>Disabled state</h3>
   <div class="style-example">
@@ -95,4 +155,10 @@
       <button type="button" class="btn btn-primary disabled">Developer</button>
     </span>
   </div>
+  <br>
+{% highlight html %}
+<button type="button" class="btn btn-default disabled">Default</button>
+<button type="button" class="btn btn-primary disabled">Primary</button>
+{% endhighlight %}
+
 </div>
