--- a/scss/docs.scss
+++ b/scss/docs.scss
@@ -388,14 +388,15 @@
   }
   .ge-show-grid {
     margin-bottom: 15px;
-  }
-  .ge-show-grid p {
-    background-color: #C3EA94;
-    text-align: center;
-    padding: 16px 0;
+
+    p {
+      background-color: #c3ea94;
+      text-align: center;
+      padding: 16px 0;
+    }
   }
   .box .ge-show-grid p {
-    background-color: #CDE496;
+    background-color: #cde496;
   }
   @media (max-width: 720px) {
     .mobile-disable {
